--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@angular/router": "~7.2.0",
     "@ng-bootstrap/ng-bootstrap": "^4.0.4",
     "core-js": "^2.5.4",
+    "ng": "0.0.0",
+    "ngx-cookie-service": "^2.1.0",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
